fixing the same css bug as before where the footer wasn't alwasy at the bottom by specifying a min-height. Also fixed the one pixel shift in upding the score by putting in its own quizzy_q_footer div

--- a/quizzy.css
+++ b/quizzy.css
@@ -40,6 +40,7 @@
 .quizzy_load_ic{
   /* Required to make bottom:0px; in the .quizzy_q_foot put that div to the bottom */
   position: relative;
+  min-height: 95%;
 }
 
 .quizzy_load_body{
